--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          bindings: geode-sdk/bindings
+          bindings: undefined06855/bindings
           bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
