--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -15,10 +15,8 @@ jobs:
         - name: Windows
           os: windows-latest
 
-        # fails because of fmod stuff
-        # if someone can fix that would be great thanks
-        #- name: macOS
-        #  os: macos-latest
+        - name: macOS
+          os: macos-latest
 
         - name: Android32
           os: ubuntu-latest
@@ -37,6 +35,7 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
+          sdk: nightly
           bindings: undefined06855/bindings
           bindings-ref: main
           combine: true
