--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,14 +9,7 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": "",
-      "variables": [
-        {
-          "name": "GEODE_BINDINGS_REPO_PATH",
-          "value": "C:\\Users\\undefined0\\things\\bindings",
-          "type": "STRING"
-        }
-      ]
+      "ctestCommandArgs": ""
     }
   ]
 }
