--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "x86_64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
-# hahaha
-set(GEODE_REVERT_TODO_RETURN ON)
-
 project(EditorMusic VERSION 1.0.0)
 
 add_library(${PROJECT_NAME} SHARED
@@ -14,6 +11,7 @@ add_library(${PROJECT_NAME} SHARED
     src/AudioManager.cpp
     src/main.cpp
     src/Keybinds.cpp
+    src/Ease.cpp
 )
 
 if (NOT DEFINED ENV{GEODE_SDK})
