--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -26,6 +26,10 @@ jobs:
           os: ubuntu-latest
           target: Android64
 
+        - name: iOS
+          os: macos-latest
+          target: iOS
+
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
@@ -38,6 +42,7 @@ jobs:
           combine: true
           bindings: undefined06855/bindings
           target: ${{ matrix.config.target }}
+          sdk: nightly
 
   package:
     name: Package builds
