wow i actually updated minor and not patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
 set(SIMDUTF_TOOLS OFF)
 CPMAddPackage("gh:simdutf/simdutf@7.0.0")
+if (CMAKE_BUILD_TYPE STREQUAL "Debug" AND WIN32)
+    target_compile_definitions(simdutf PRIVATE _ITERATOR_DEBUG_LEVEL=0)
+endif()
 target_link_libraries(${PROJECT_NAME} simdutf)
 
 setup_geode_mod(${PROJECT_NAME})
