--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -36,6 +36,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: (Windows) Update LLVM
+        run: choco upgrade llvm
+        if: matrix.config.os == 'windows-latest'
+
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
